syntax = "proto3";
package auth;

import "auth/user.proto";

message UserDevice {
    string deviceID = 1;
    string deviceName = 2;
    string fcmToken = 3;
    optional string deviceTimezone = 4;
}

message GetUserDevicesRequest {
    User user = 1;
}

message GetUserDevicesResponse {
    repeated UserDevice devices = 1;
}

service UserService {
    rpc GetUserDevices(GetUserDevicesRequest) returns (GetUserDevicesResponse);
}